--- a/剑指offer/10_矩阵覆盖/.project
+++ b/剑指offer/10_矩阵覆盖/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>10_矩阵覆盖</name>
+	<name>9_10_矩阵覆盖</name>
 	<comment></comment>
 	<projects>
 	</projects>
