--- a/剑指offer/4_重建二叉树/.project
+++ b/剑指offer/4_重建二叉树/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>4_重建二叉树</name>
+	<name>4_重建二叉树_递归</name>
 	<comment></comment>
 	<projects>
 	</projects>
