--- a/剑指offer/8_跳台阶/.project
+++ b/剑指offer/8_跳台阶/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>8_跳台阶</name>
+	<name>8_跳台阶_递归</name>
 	<comment></comment>
 	<projects>
 	</projects>
