--- a/剑指offer/9_18_树的镜像/.project
+++ b/剑指offer/9_18_树的镜像/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>9_0_变态跳台阶_递归</name>
+	<name>9_18_树的镜像</name>
 	<comment></comment>
 	<projects>
 	</projects>
