--- a/剑指offer/HelloTest/.project
+++ b/剑指offer/HelloTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2_替换空格</name>
+	<name>HelloTest</name>
 	<comment></comment>
 	<projects>
 	</projects>
